@@ -27,6 +27,7 @@ S3method("dp_resource<-",readonlydatapackage)
 S3method("dp_title<-",datapackage)
 S3method("dp_title<-",dataresource)
 S3method("dp_title<-",fielddescriptor)
+S3method("dp_type<-",fielddescriptor)
 S3method(dp_bytes,dataresource)
 S3method(dp_categorieslist,default)
 S3method(dp_categorieslist,fielddescriptor)
@@ -112,6 +113,7 @@ S3method(dp_to_yearmonth,POSIXt)
 S3method(dp_to_yearmonth,character)
 S3method(dp_to_yearmonth,integer)
 S3method(dp_to_yearmonth,numeric)
+S3method(dp_type,fielddescriptor)
 S3method(dp_write_data,datapackage)
 S3method(dp_write_data,dataresource)
 S3method(print,contributor)
@@ -139,6 +141,7 @@ export("dp_property<-")
 export("dp_resource<-")
 export("dp_resources<-")
 export("dp_title<-")
+export("dp_type<-")
 export(csv_reader)
 export(csv_writer)
 export(dp_add_contributor)
@@ -187,6 +190,7 @@ export(dp_to_string)
 export(dp_to_time)
 export(dp_to_year)
 export(dp_to_yearmonth)
+export(dp_type)
 export(dp_write_data)
 export(fwf_reader)
 export(new_contributor)
