@@ -308,7 +308,7 @@ Package</p>
 <span id="n1-5"><a href="#n1-5" aria-hidden="true" tabindex="-1"></a><span class="sc">&gt;</span> dp</span>
 <span id="n1-6"><a href="#n1-6" aria-hidden="true" tabindex="-1"></a>[example] An Example Data Package</span>
 <span id="n1-7"><a href="#n1-7" aria-hidden="true" tabindex="-1"></a></span>
-<span id="n1-8"><a href="#n1-8" aria-hidden="true" tabindex="-1"></a>Location<span class="sc">:</span> <span class="er">&lt;/</span>tmp<span class="sc">/</span>Rtmpord77E<span class="sc">/</span>file723d58094e98<span class="sc">&gt;</span></span>
+<span id="n1-8"><a href="#n1-8" aria-hidden="true" tabindex="-1"></a>Location<span class="sc">:</span> <span class="er">&lt;/</span>tmp<span class="sc">/</span>RtmpBxRkt4<span class="sc">/</span>fileb12e764f30c1<span class="sc">&gt;</span></span>
 <span id="n1-9"><a href="#n1-9" aria-hidden="true" tabindex="-1"></a><span class="er">&lt;</span>NO RESOURCES<span class="sc">&gt;</span></span></code></pre></div>
 <p>This will return an <code>editabledatapackage</code>. This means that
 any changes to the Data Package are immediately saved to the
@@ -642,7 +642,7 @@ the edits in this vignette:</p>
 <span id="e10-100"><a href="#e10-100" aria-hidden="true" tabindex="-1"></a>    }</span>
 <span id="e10-101"><a href="#e10-101" aria-hidden="true" tabindex="-1"></a>  ],</span>
 <span id="e10-102"><a href="#e10-102" aria-hidden="true" tabindex="-1"></a>  <span class="st">&quot;id&quot;</span><span class="sc">:</span> <span class="st">&quot;iris_chkwts&quot;</span>,</span>
-<span id="e10-103"><a href="#e10-103" aria-hidden="true" tabindex="-1"></a>  <span class="st">&quot;created&quot;</span><span class="sc">:</span> <span class="st">&quot;2025-03-10&quot;</span></span>
+<span id="e10-103"><a href="#e10-103" aria-hidden="true" tabindex="-1"></a>  <span class="st">&quot;created&quot;</span><span class="sc">:</span> <span class="st">&quot;2025-03-17&quot;</span></span>
 <span id="e10-104"><a href="#e10-104" aria-hidden="true" tabindex="-1"></a>}</span></code></pre></div>
 </body>
 </html>
