@@ -945,10 +945,11 @@ Setting
 <td>
 <code>type</code>
 </td>
-<td class="partial">
-Used by <code>dp_get_data()</code>.
+<td class="complete">
+<code>dp_type()</code>; also used by <code>dp_get_data()</code>.
 </td>
-<td class="incomplete">
+<td class="complete">
+<code>dp_type&lt;-()</code>
 </td>
 </tr>
 <tr>
